opam-version: "1.2"
maintainer: "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors: ["Thomas Gazagnaire" "Jérémie Dimino"]
homepage: "https://github.com/realworldocaml/ocaml-cram"
license: "ISC"
dev-repo: "https://github.com/realworldocaml/ocaml-cram.git"
bug-reports: "https://github.com/realworldocaml/ocaml-cram/issues"

build: [ "jbuilder" "build" ]

depends: [
  "jbuilder" {build}
  "cmdliner"
  "fmt"
]

available: [
  ocaml-version >= "4.06.0"
]
