opam-version: "2.0"
maintainer:   "Thomas Gazagnaire <thomas@gazagnaire.org>"
authors:      ["Thomas Gazagnaire <thomas@gazagnaire.org"]
homepage:     "https://github.com/realworldocaml/craml"
license:      "ISC"
dev-repo:     "git+https://github.com/realworldocaml/craml.git"
bug-reports:  "https://github.com/realworldocaml/craml/issues"
doc:          "https://realworldocaml.github.io/craml/doc"

build: [
 ["dune" "subst" "-p" name] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]
run-test: ["dune" "runtest" "-p" name]

depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
  "fmt"
  "astring"
  "logs"
  "cmdliner"
]
